name:                hydrant-html
version:             1.0.0.0
author:              Tim Humphries
maintainer:          tim@utf8.me
bug-reports:         https://github.com/thumphries/hydrant
copyright:           (c) 2017 Ambiata
                     (c) 2017 Tim Humphries
license:             BSD3
license-file:        LICENSE
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  CHANGELOG.md

synopsis:
  Simple HTML combinators
description:
  Simple HTML combinators.

source-repository head
  type: git
  location: git://github.com/thumphries/hydrant.git

library
  build-depends:
                     base             >= 3      && < 5
                   , hydrant-markup   == 1.0.*
                   , text             == 1.2.*

  default-language:
                     Haskell2010

  ghc-options:
                     -Wall -O2

  hs-source-dirs:
                     src

  exposed-modules:
                     Hydrant.Html
                     Hydrant.Html.Data
                     Hydrant.Html.Monadic
