name:                hydrant-markup
version:             1.0.0.0
author:              Tim Humphries
maintainer:          tim@utf8.me
bug-reports:         https://github.com/thumphries/hydrant
copyright:           (c) 2017 Ambiata
                     (c) 2017 Tim Humphries
license:             BSD3
license-file:        LICENSE
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  CHANGELOG.md

synopsis:
  Simple markup combinators
description:
  Simple markup combinators.

source-repository head
  type: git
  location: git://github.com/thumphries/hydrant.git

library
  build-depends:
                     base             >= 3      && < 5
                   , bytestring       >= 0.10.4 && < 0.11
                   , text             == 1.2.*
                   , text-builder     == 0.4.*

  default-language:
                     Haskell2010

  ghc-options:
                     -Wall -O2

  hs-source-dirs:
                     src

  exposed-modules:
                     Hydrant.Markup
                     Hydrant.Markup.Data
                     Hydrant.Markup.Internal
                     Hydrant.Markup.Monadic
